examples/errors/header/empty_x.abc
X:
T:Empty X
K:C
% H011: Empty reference number
CDEF|
